# NRC-HPM-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install-openvdb-debug.bat  install-openvdb-release.bat  vcpkg.json
OutputAnalysis/: MetricPlotting.ipynb
VariousReferences/JitteredRaymarching/reference/4/: 0.exr
VariousReferences/RatioTracking/reference/1/: 0.exr
data/shader/include/: common.glsl  dir_gen.glsl  mc-descriptors.glsl  nrc-constants.glsl  nrc-descriptors.glsl  nrc-indexing.glsl  path_trace.glsl  volume.glsl
data/shader/mc/: render.comp
data/shader/nrc/: gen_rays.comp  prep_infer_rays.comp  prep_train_rays.comp  render.comp
include/engine/: AppConfig.hpp  HpmScene.hpp
include/engine/graphics/: NeuralRadianceCache.hpp
include/engine/graphics/renderer/: McHpmRenderer.hpp  NrcHpmRenderer.hpp
include/engine/graphics/vulkan/: Texture3D.hpp
include/engine/util/: Input.hpp  LogFile.hpp
src/: AppConfig.cpp  Camera.cpp  DirLight.cpp  HpmScene.cpp  ImGuiRenderer.cpp  Input.cpp  LogFile.cpp  McHpmRenderer.cpp  Model.cpp  NeuralRadianceCache.cu  NrcHpmRenderer.cu  Reference.cpp  RestirHpmRenderer.cpp  Shader.cpp  SimpleModelRenderer.cpp  Texture3D.cpp  Window.cpp  main.cu
